refactor: Massage core repos (#681)